@@ -2,6 +2,8 @@
 v3.2.0-git
 ----------
 
+[mms] Replace max blacklist/whitelist configuration parameters with equivalent
+      permissions options.
 [mms] Sorting of rules now done via drag/drop javascript.
 [jan] Make shares table compatible with Oracle.
 [mms] Validate e-mail addresses on the forward and vacation pages (Request
